--- a/client/src/styles/scss/pages/_movie-details.scss
+++ b/client/src/styles/scss/pages/_movie-details.scss
@@ -195,6 +195,7 @@
 
 @media (min-width: 1000px) {
   .movie-details-container {
+    margin-top: 200px;
     .movie-details-grid {
       padding: 0px 180px;
       display: flex;
